# mail_kraken

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  build-docker.sh  run-docker.sh
assets/css/: styles.css
assets/js/: admin_dash.js  login.js
assets/sql/: init_db.sql
config/: logging.cfg
sql/: drop_tables.sql  init_db_v1.sql
src/: cmd_args.rs  config.rs  db.rs  doveadm.rs  httpd.rs  import.rs  lib.rs  libc_util.rs  util.rs
src/db/: email_db.rs  email_parser.rs  email_parser_regex.rs
src/doveadm/: auth.rs  cmd_args.rs  fetch.rs  params.rs  parser.rs
src/doveadm/fetch/: params.rs  parser.rs  stdout_reader.rs
src/doveadm/fetch/parser/: generic_parser.rs  hdr_parser.rs  macro_parsers.rs  single_line_parser.rs  uid_parser.rs
src/doveadm/parser/: .hdr_parser.rs.swp  flags_parser.rs  generic_parser.rs  hdr_parser.rs  single_line_parser.rs
src/httpd/: admin.rs  db.rs  error.rs  login.rs  state_data.rs  user.rs  util.rs
src/import/: db.rs  email_db.rs  email_parser.rs
src/libc_util/: libc_string.rs
templates/: admin_dash.html  admin_dashboard.html  admin_login.html  dash.html  error.html  error_msg.html  header.html  login.html
