[package]
name = "mail_kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
paw = "1"
anyhow = "1"
strum_macros = "0.24"
chrono = "0.4"
regex = "1.6"
nix = "0.24"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.axum]
version = "0.5.15"

[dependencies.structopt]
version = "0.3.14"
features = ["paw"]

[dependencies.mod_logger]
version = "0.8.1"
# path = "../ModuleLogger"

