[package]
name = "mail_kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name  = "import"
test = false
bench = false

# [[bin]]
# name  = "mysql_test"
# test = true
# bench = false

[[bin]]
name  = "serve"
test = false
bench = false

[dependencies]

log = "0.4"
paw = "1"
anyhow = "1"
strum_macros = "0.24"
chrono = "0.4"
regex = "1.6"
nix = "0.25.0"
askama = "0.11.1"
rand = "0.8.5"
bcrypt = "0.13.0"
toml = "0.5"
mysql_async = "0.30"
mysql = "22.2.0"
async-trait = "0.1.57"

[dependencies.rfc2047-decoder]
git = "https://github.com/samothx/rfc2047-decoder"

[dependencies.serde]
version = "1.0.143"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.actix-files]
version = "0.6.1"

[dependencies.actix-identity]
# breaking changes in 0.5
version = "0.4"


# [dependencies.actix-http]
# version = "0.2"

[dependencies.actix-web]
version = "4"


[dependencies.structopt]
version = "0.3.14"
features = ["paw"]

[dependencies.mod_logger]
version = "0.8.1"
features = ["config"]
# path = "../ModuleLogger"

